# vitality

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  coffee.yml  pyproject.toml
.github/workflows/: ci.yml  latest_v23.08.yml  latest_v23.11.yml  latest_v24.02.yml  main_v23.08.yml  main_v23.11.yml  main_v24.02.yml  release.yml  v23.11.yml  v24.02.yml
src/: amboss.rs  channelwatch.rs  config.rs  main.rs  rpc.rs  structs.rs  util.rs
tests/: pyproject.toml  setup.sh  test_vitality.py  util.py
