[package]
name = "vitality"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1"
log = { version = "0.4", features = ['std'] }
# serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# bitcoincore-rpc = "0.17.0"

tokio = { version = "1", features = ["sync","rt-multi-thread"] }
cln-rpc = "0.1.6"
# cln-rpc = { path="cln-rpc/", version = "^0.1" }
cln-plugin = "0.1.6"

teloxide ={ version = "0.12", default-features = false, features = ["rustls"]}

chrono = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json","rustls-tls"] }

parking_lot = "0.12"

log-panics = "2"

lettre = {version = "0.11", default-features = false, features = ["tokio1-rustls-tls","smtp-transport","builder"]}

[profile.optimized]
inherits = "release"
strip = true
codegen-units = 1
lto = "fat"
debug = false